# nixpkgs-vendored-vulns-scan

./: .gitignore  LICENSE  README.md  flake.nix
.github/workflows/: run-tests.yml
vendoredvulns/: .gitignore
vendoredvulns/frontend/: admin.py  asgi.py  auth.py  manage.py  models.py  pyproject.toml  serializers.py  urls.py  views.py  wsgi.py
vendoredvulns/frontend/migrations/: 0001_initial.py
vendoredvulns/frontend/settings/: base.py  local.py  prod.py
vendoredvulns/scanner/: audit.py  extract-lockfiles.nix  nix.py  output.py  pyproject.toml  scanner.py
