[tool.poetry]
name = "vendored-vulns-frontend"
version = "0.1.0"
description = "Frontend component for the nixpkgs vendored vulnerabilities dashboard."
authors = ["Pierre Bourdon <delroth@gmail.com>"]
license = "MIT"
readme = "../../README.md"
packages = [{include = "vendoredvulns/frontend", from = "../.."}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
